[gd_scene load_steps=9 format=3 uid="uid://c0clmq3uvghuf"]

[ext_resource type="Script" path="res://scripts/dots.gd" id="1_xndic"]
[ext_resource type="AudioStream" uid="uid://cdxhwtnjbv7hf" path="res://assets/sounds/dot.wav" id="2_ltm4g"]

[sub_resource type="SphereShape3D" id="SphereShape3D_pi33j"]
radius = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hepfo"]
albedo_color = Color(0.874546, 0.80552, 0.357375, 1)
roughness = 0.35

[sub_resource type="SphereMesh" id="SphereMesh_fb6wp"]
material = SubResource("StandardMaterial3D_hepfo")
radius = 0.15
height = 0.3

[sub_resource type="Animation" id="Animation_2f774"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qkdhn"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.2, 0), Vector3(0, 0.2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_djkso"]
_data = {
"RESET": SubResource("Animation_2f774"),
"idle": SubResource("Animation_qkdhn")
}

[node name="Dots" type="Node3D"]
script = ExtResource("1_xndic")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_pi33j")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_fb6wp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_djkso")
}

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_ltm4g")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="finished" from="AudioStreamPlayer3D" to="." method="_on_audio_stream_player_3d_finished"]
